[package]
name = "usb-log"
version = "0.1.0"
edition = "2021"
authors = ["Stephan <kiffie@mailbox.org>"]
license = "GPL-2.0-or-later"

[dependencies]
log = "0.4.14"
usb-device = "0.2.9"
critical-section = "1.0.0"

[features]
panic-handler = []
#panic-info-message = ["panic-handler"]
#default = ["panic-handler", "panic-info-message"]
